--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "test",
+  "name": "goit-react-hw-04-images",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AntonyZP.github.io/test/",
+  "homepage": "https://AntonyZP.github.io/goit-react-hw-04-images/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
